# videosqueeze

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: fetch-ffmpeg.sh  gen-icon.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  BatchQueue.tsx  BatchView.tsx  CompareView.tsx  DropZone.tsx  FileCard.tsx  ProgressView.tsx  QualitySelector.tsx  ResultSummary.tsx  SingleFileView.tsx  TrimEditor.tsx
src/components/quality/: CustomPanel.tsx  PresetCards.tsx  QualityControls.tsx  QualitySelector.tsx  TargetPanel.tsx
src/components/ui/: SegmentedControl.tsx
src/engine/: index.ts  nativeEngine.ts  presets.ts  types.ts  wasmEngine.ts
src/hooks/: useBatchQueue.ts  useQualitySettings.ts  useSingleCompression.ts  useSyncedPlayback.ts  useVideoInput.ts
src/lib/: compression.ts  format.ts  videoFiles.ts
